applications/wordpress/mariadb-service-active.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service-active
spec:
  type: ClusterIP
  ports:
    - name: mariadb-service-active-port
      port: 3306
      targetPort: db-port
  selector:
    app: wordpress
    type: database
