applications/wordpress/wordpress-service-active.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service-active
spec:
  type: ClusterIP
  ports:
    - name: wordpress-service-active-http-port
      port: 80
      targetPort: http-port
    - name: wordpress-service-active-https-port
      port: 443
      targetPort: https-port
  selector:
    app: wordpress
    tier: frontend
