applications/wordpress/wordpress-service-preview.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service-preview
spec:
  type: ClusterIP
  ports:
    - name: wordpress-service-preview-http-port
      port: 80
      targetPort: http-port
    - name: wordpress-service-preview-https-port
      port: 443
      targetPort: https-port
  selector:
    app: wordpress
    tier: frontend
