applications/wordpress/wordpress-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: nginx # https://github.com/nginxinc/kubernetes-ingress/issues/1274
spec:
  rules:
    - host: www.wordpress.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service-active
                port:
                  number: 8
    - host: www.wordpress.org
      https:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service-active
                port:
                  number: 443
